# KrakOFF

./: 1.py  README.md  Untitled-1.ipynb  Untitled-2.ipynb  data_standarize.ipynb  data_videos.py  embedding.py  pyproject.toml  scoringSystem.py  scrape.ipynb  scrape_wiki.ipynb  standarize_data.py  test.db  wydarzenia.csv  wydarzenia_cleaned.csv  wydarzenia_krakow.csv
app/: auth.py  content.py  database.py  dependencies.py  events.py  interactions.py  main.py  models.py  schemas.py  security.py
app/data/: wydarzenia_cleaned.csv
data/: events_tiktak.csv
data_events/: Wydarzenia_z_interakcjami.csv  wydarzenia_cleaned.csv
data_prepare/: scrape.py  scrape_events.ipynb
data_prepare/data/: events_tiktak.csv
data_prepare/data_to_clean/: wydarzenia_karnet_krakow_z_obrazkami_20250530-062133.csv
krakoff/: README.md  pubspec.yaml
krakoff/android/app/: build.gradle.kts
krakoff/android/app/src/main/: AndroidManifest.xml
krakoff/android/app/src/main/kotlin/com/example/krakoff/: MainActivity.kt
krakoff/ios/Runner/: Info.plist
krakoff/ios/Runner.xcodeproj/: project.pbxproj
krakoff/linux/: CMakeLists.txt
krakoff/linux/runner/: my_application.cc
krakoff/macos/Runner.xcodeproj/: project.pbxproj
krakoff/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
krakoff/macos/Runner/Configs/: AppInfo.xcconfig
krakoff/test/: widget_test.dart
krakoff/web/: index.html  manifest.json
krakoff/windows/: CMakeLists.txt
krakoff/windows/runner/: Runner.rc  main.cpp
scoringSystem/: scoringSystem.py
(+1 files in other folders)
