[tool.poetry]
name = "krakoff"
version = "0.1.0"
description = ""
authors = ["piasekj <piasekj1602@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.2.6"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
sqlalchemy = "^2.0.41"
pydantic = "^2.11.5"
python-jose = "^3.5.0"
bcrypt = "<4.1.0"
email-validator = "^2.2.0"
passlib = "^1.7.4"
python-multipart = "^0.0.20"
regex = "^2024.11.6"
black = "^25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
